--- a/src/components/pages/exams/List.css
+++ b/src/components/pages/exams/List.css
@@ -13,8 +13,16 @@
 
 
 .no-coincidences-message{
-    color: grey;
+    color: #8080808f;
     margin-top: 160px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: x-large;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.no-coincidences-message i {
+    font-size: 70px;
 }
