--- a/src/components/pages/form.css
+++ b/src/components/pages/form.css
@@ -7,17 +7,17 @@
   .title_1{
     font-size: 70px;
     text-align: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #fff
     
 }
 
 .form-container{
     
-    height: 85vh;
+    height: 100vh;
     padding: 24px;
     background: linear-gradient(to right, rgb(26 23 23), #0059ff);
-
+    margin-bottom: -100px;
 }
 
 .upload-button {
