--- a/src/components/pages/exams/Menu.css
+++ b/src/components/pages/exams/Menu.css
@@ -11,15 +11,60 @@
     margin-bottom: 69px;
     height: 50vh;
     background: rgb(63,94,251);
+    background-image: ;
     /* background: linear-gradient(90deg, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%); */
-    background: linear-gradient(90deg, rgba(63,94,251,1) 0%, #0059ffdb 100%);
+    background: linear-gradient(45deg, #2f78ff 0%, #006effdb 100%);
+    overflow: hidden;
     
 }
 
+
+
+.background li {
+    position: absolute;
+    display: block;
+    list-style: none;
+    border-radius: 10px;
+    background: rgba(255, 255, 255, 0.242);
+    animation: animate 42s linear infinite;
+}
+
+
+
+@keyframes animate {
+    0%{
+        transform: translateY(0) rotate(0deg);
+        opacity: 0;
+       
+    }
+    100%{
+        transform: rotate(720deg);
+        opacity: 1;
+        border-radius: 50%;
+    }
+}
+
+.background li:nth-child(1) {
+    left: 4%;
+    width: 115px;
+    height: 115px;
+    bottom: 348px;
+    rotate: 30deg;
+   
+}
+.background li:nth-child(2) {
+    right: 5%;
+    width: 202px;
+    height: 202px;
+    bottom: 515px;
+    animation-delay: 6s;
+    rotate: 30deg;
+}
 .hero-text{
     margin-top: 10px;
     width: 50%;
-    font-size: x-large;
+    font-weight: 600;
+    font-size: 35px;
     text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
