--- a/src/components/pages/parcial/Item2.css
+++ b/src/components/pages/parcial/Item2.css
@@ -68,7 +68,7 @@
     max-width: 100%;
     height: 100%;
     margin-top: 0px;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
     max-height: 100%;
     object-fit: cover;
     transition: all 0.2s linear;
@@ -84,6 +84,8 @@
     filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
     border-radius: 10px;
     overflow: hidden;
+    padding: 20px 0px;
+    margin-bottom: 1rem;
     text-decoration: none;
   }
 
@@ -101,7 +103,11 @@
   .cards__item__text2 {
     color: #000000;
     font-size: 14px;
-    line-height: 24px;
+    line-height: 34px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+  }
+
+  .cards__item__info {
+    padding: 5px 30px 30px;
   }
