--- a/src/components/pages/exams/StyleExams.css
+++ b/src/components/pages/exams/StyleExams.css
@@ -4,6 +4,20 @@
 
 }
 
+.home {
+  box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
+  display: block;
+    
+    font-size: 24px;
+    color: #0059ff;
+    padding: 10px;
+    margin-top: 27px !important;
+    max-width: 131px;
+    border-radius: 12px;
+    position: absolute;
+    right: 5%;
+}
+
 .input{
   padding: 5px;
   outline: none;
